# phoenix

./: README.md  TODO.md  main.py  main_client.py  pyproject.toml
src/simulation/: bot.py  connection.py  mobs.py  projectiles.py  soa.py  state.py  step.py
src/visualization/: connection.py  visualize.py
